test/files/neg/macro-bundle-noncontext.check
macro-bundle-noncontext.scala:8: error: not found: value Bundle
  def foo = Bundle.impl
            ^
one error found
